--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	</style>
 </head>
 <body style="background-color: #0d0d0d;" class="clickable">
+<div style="background-color:red;width:100%;height:200px;color:white;font-size:30px;font-weight:bold;align:center;display:flex;align-items:center;justify-content:center;">DEPRECETED , BECAUSE OF INSTAGRAM LOGIN REDIRECTION . USE UNDER YOUR RISK!</div>
 <div style="background-color: #262626;border-radius: 0 0 15px 15px;text-align:center;display: flex;justify-content: center;align-items: center;padding:10px 0 15px 0;box-shadow: 1px 1px 25px 7px #303030;transition: 0.15s ease;" align="center" id="main">
 <br>
 <input type="text" id="query" name="query" placeholder="Query..." style="margin-right: 5px;">
